<resources>
    <string name="app_name">FoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_favorites">Favorites</string>
    <string name="bottom_menu_categories">Categories</string>
    <string name="image_search">Search</string>
    <string name="home">Home</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="image_random_meal">Random_meal</string>
    <string name="over_popular_items">Over popular items</string>
    <string name="categories">Categories</string>
    <string name="category_beef">Category : Beef</string>
    <string name="area_british">Area : British</string>
    <string name="image_meal_name">Meal name</string>
    <string name="fab_favorite">Fab favorite</string>
    <string name="instructions">- Instructions :</string>
    <string name="category_name">Category name</string>
    <string name="image_youtube">Youtube</string>
    <string name="image_bottom_sheet">Bottom Sheet</string>
    <string name="text_view_area">Area</string>
    <string name="beef">Beef</string>
    <string name="meal_name">Meal Name</string>
    <string name="read_more">Read More...</string>
    <string name="image_meal">Image meal</string>
    <string name="test">test</string>
    <string name="search_meals">Search Meals...</string>
    <string name="image_arrow">Arrow</string>
</resources>