<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/crimson_pro"
                    android:text="@string/home"
                    android:textColor="@color/accent"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/image_search"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_search"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_search"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_would_like_to_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/crimson_pro"
                android:text="@string/what_would_you_like_to_eat"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/linear_header"
                app:layout_constraintTop_toBottomOf="@+id/linear_header" />

            <androidx.cardview.widget.CardView
                android:id="@+id/random_meal_card"
                android:layout_width="0dp"
                android:layout_height="350dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="32dp"
                app:cardCornerRadius="13dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_would_like_to_eat">

                <ImageView
                    android:id="@+id/image_random_meal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_random_meal"
                    android:scaleType="centerCrop"
                    android:src="@color/accent" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_over_popular_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:fontFamily="@font/crimson_pro"
                android:text="@string/over_popular_items"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_would_like_to_eat"
                app:layout_constraintTop_toBottomOf="@+id/random_meal_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="156dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_over_popular_items" />

            <TextView
                android:id="@+id/tv_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/crimson_pro"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_over_popular_items"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:cardCornerRadius="13dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_categories">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_categories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>